Use built-in fonts, fix Event DOM structure, wrong Navigator display on IE.

--- a/modules/web/src/app/container/header/header.scss
+++ b/modules/web/src/app/container/header/header.scss
@@ -3,6 +3,7 @@
 .navigator {
   margin-block-start: 0.4em;
   margin-block-end: 0.4em;
+  padding: 0;
   font-size: 1em;
   font-weight: bold;
   color: $color-light;
@@ -20,8 +21,7 @@
     &:before {
       content: '·';
       display: inline-block;
-      padding-inline-start: 0.35em;
-      padding-inline-end: 0.35em;
+      padding: 0 0.35em;
     }
 
     &:first-child {
