--- a/modules/web/src/app/index.scss
+++ b/modules/web/src/app/index.scss
@@ -2,7 +2,6 @@
 @import 'purecss/build/grids-min.css';
 @import 'purecss/build/grids-responsive-min.css';
 
-@import './asset/font/ibm-plex-sans/styles.css';
 @import './shared/variables.scss';
 @import './container/header/header.scss';
 @import './container/content/content.scss';
@@ -21,7 +20,7 @@ input,
 select,
 textarea,
 .pure-g [class*='pure-u'] {
-  font-family: IBMPlexSans, Arial, Helvetica, sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", Oxygen, Cantarell, sans-serif;
 }
 
 a {
